--- a/oscar/templates/checkout/shipping_methods.html
+++ b/oscar/templates/checkout/shipping_methods.html
@@ -1,5 +1,6 @@
 {% extends "checkout/checkout.html" %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block title %}
 {% trans "Shipping method" %} | {{ block.super }}
