Fixed issue with translation on review delete page

--- a/oscar/templates/dashboard/catalogue/product_list.html
+++ b/oscar/templates/dashboard/catalogue/product_list.html
@@ -84,7 +84,7 @@
 		{% endwith %}
 		<td>
 			<a class="btn btn-info" href="{% url dashboard:catalogue-product product.id %}">{% trans "Edit" %}</a>
-			<a class="btn btn-success" href="{{ product.get_absolute_id }}">{% trans "View on site" %}</a>
+			<a class="btn btn-success" href="{{ product.get_absolute_url }}">{% trans "View on site" %}</a>
 		</td>
     </tr>
     {% endfor %}
