--- a/oscar/templates/dashboard/pages/index.html
+++ b/oscar/templates/dashboard/pages/index.html
@@ -13,7 +13,7 @@
 	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
-	<li class="active"><a href=".">{% trans "Page Management" %}</a></li>
+	<li class="active"><a href=".">{% trans "Pages" %}</a></li>
 </ul>
 {% endblock %}
 
@@ -37,17 +37,19 @@
     <h2>{{ queryset_description }}</h2>
 </div>
 
-<a class="btn btn-primary btn-large" href="{% url dashboard:page-create %}">{% trans "Create new page" %}</a>
 
 {% if flatpage_list.count %}
 <form action="." method="post">
     {% csrf_token %}
 <table class="table table-striped table-bordered">
+	<thead>
     <tr>
 		<th>{% trans "Title" %}</th>
 		<th>{% trans "URL" %}</th>
         <th></th>
     </tr>
+	</thead>
+	<tbody>
     {% for page in flatpage_list %}
     <tr>
         <td>{{ page.title}}</td>
@@ -58,6 +60,7 @@
 			<a class="btn btn-danger" href="{% url dashboard:page-delete page.id %}">{% trans "Delete" %}</a>
         </td>
     </tr>
+</tbody>
     {% endfor %}
 </table>
 
@@ -65,6 +68,8 @@
     {% include "catalogue/partials/pagination.html" %}
 {% endif %}
 </form>
+
+<a class="btn btn-primary btn-large" href="{% url dashboard:page-create %}">{% trans "Create new page" %}</a>
 
 {% else %}
 
