--- a/oscar/templates/dashboard/pages/update.html
+++ b/oscar/templates/dashboard/pages/update.html
@@ -1,5 +1,4 @@
 {% extends 'dashboard/layout.html' %}
-{% load currency_filters %}
 {% load i18n %}
 
 {% block body_class %}pages{% endblock %}
@@ -14,10 +13,10 @@
         <span class="divider">/</span>
     </li>
     <li>
-	<a href="{% url dashboard:page-list %}">{% trans "Page management" %}</a>
+	<a href="{% url dashboard:page-list %}">{% trans "Pages" %}</a>
         <span class="divider">/</span>
     </li>
-	<li class="active"><a href=".">{% trans "Update page" %}</a></li>
+	<li class="active"><a href=".">{{ title }}</a></li>
 </ul>
 {% endblock %}
 {% block header %}
@@ -39,9 +38,5 @@
 			<a href="{% url dashboard:page-list %}">{% trans "cancel" %}</a>
 		</div>
 </form>
-
-{% if page %}
-<p><a class="btn btn-success" href="{{ page.get_absolute_url }}">{% trans "View on site" %}</a></p>
-{% endif %}
 
 {% endblock dashboard_content %}
