--- a/oscar/templates/dashboard/users/detail.html
+++ b/oscar/templates/dashboard/users/detail.html
@@ -5,7 +5,7 @@
 {% block body_class %}users{% endblock %}
 
 {% block title %}
-{% blocktrans %}Customer {{ customer.email }}{% endblocktrans %} | {{ block.super }}
+{% blocktrans with email=customer.email %}{{ email }}{% endblocktrans %} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
@@ -18,13 +18,13 @@
 	<a href="{% url dashboard:users-index %}">{% trans "Customers" %}</a>
         <span class="divider">/</span>
     </li>
-	<li class="active"><a href=".">#{{ customer.id }}</a></li>
+	<li class="active"><a href=".">{% blocktrans with email=customer.email %}{{ email }}{% endblocktrans %}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
     <div class="page-header">
-		<h1>{% blocktrans %}Customer #{{ customer.id }} - {{ customer.email }}{% endblocktrans %}</h1>
+		<h1>{% blocktrans with email=customer.email %}{{ email }}{% endblocktrans %}</h1>
     </div>
 {% endblock header %}
 
@@ -38,13 +38,13 @@
 				<li>{% trans "First name:" %} {{ customer.first_name|default:"-" }}</li>
 				<li>{% trans "Last name:" %} {{ customer.last_name|default:"-" }}</li>
 				<li>
-					{% if user.is_active %}
+					{% if customer.is_active %}
 					{% trans "This customer is active" %}
 					{% else %}
 					{% trans "This customer is inactive" %}
 					{% endif %}
 				</li>
-                {% if user.is_superuser %}
+                {% if customer.is_superuser %}
 				<li><strong>{% trans "Superuser" %}</strong></li>
                 {% endif %}
             </ul>
@@ -100,7 +100,7 @@
 	<div class="tab-content">
         <div id="user_orders" class="tab-pane active">
 			<h2>{% trans "Orders" %}</h2>
-            {% if user.orders.count %}
+            {% if customer.orders.count %}
              <table class="table table-striped table-bordered">
                  <tr>
 					 <th>{% trans "Order Number" %}</th>
@@ -110,7 +110,7 @@
 					 <th>{% trans "Status" %}</th>
                      <th></th>
                  </tr>
-                 {% for order in user.orders.all %}
+                 {% for order in customer.orders.all %}
                  <tr>
                      <td>{{ order.number }}</td>
                      <td>{{ order.num_items }}</td>
@@ -129,7 +129,7 @@
         <div id="user_addresses" class="tab-pane">
 			<h2>{% trans "Addresses" %}</h2>
             <div class="row-fluid">
-        	{% for address in user.addresses.all %}
+        	{% for address in customer.addresses.all %}
 
                 <div class="span3">
             	    <div class="well well-info">
@@ -154,7 +154,7 @@
             <div class="sub-header">
 				<h2>{% trans "Reviews" %}</h2>
             </div>
-            {% if user.reviews.count %}
+            {% if customer.reviews.count %}
             <table class="table table-striped table-bordered">
                 <tr>
 					<th>{% trans "Product ID" %}</th>
@@ -163,7 +163,7 @@
 					<th>{% trans "Body" %}</th>
 					<th>{% trans "Date created" %}</th>
                 </tr>
-                {% for review in user.reviews.all %}
+                {% for review in customer.reviews.all %}
                 <tr>
                     <td>{{ review.product_id }}</td>
                     <td>{{ review.score }}</td>
