--- a/oscar/templates/dashboard/promotions/delete.html
+++ b/oscar/templates/dashboard/promotions/delete.html
@@ -1,6 +1,11 @@
 {% extends 'dashboard/layout.html' %}
 {% load i18n %}
 
+{% block title %}
+{% blocktrans with name=object.name %}Delete content block '{{ name }}'?"{% endblocktrans %}
+| {{ block.super }}
+{% endblock  %}
+
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
@@ -11,13 +16,13 @@
 	<a href="{% url dashboard:promotion-list %}">{% trans "Content blocks" %}</a>
         <span class="divider">/</span>
     </li>
-	<li class="active"><a href=".">{% trans "Delete content block?" %}</a></li>
+	<li class="active"><a href=".">{% blocktrans with name=object.name %}Delete content block '{{ name }}'?"{% endblocktrans %}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-	<h1>{% trans "Delete content block?" %}</h1>
+	<h1>{% blocktrans with name=object.name %}Delete content block '{{ name }}'?"{% endblocktrans %}</h1>
 </div>
 {% endblock header%}
 
