--- a/oscar/templates/dashboard/vouchers/voucher_delete.html
+++ b/oscar/templates/dashboard/vouchers/voucher_delete.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-{% blocktrans %}Delete voucher '{{ voucher.name }}'?{% endblocktrans %} | Vouchers | {{ block.super }}
+{% blocktrans with name=voucher.name %}Delete voucher '{{ name }}'?{% endblocktrans %} | Vouchers | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
@@ -16,13 +16,13 @@
 	<a href="{% url dashboard:voucher-list %}">{% trans "Vouchers" %}</a>
         <span class="divider">/</span>
     </li>
-	<li class="active"><a href=".">{% blocktrans %}Delete voucher '{{ voucher.name }}'?{% endblocktrans %}</a></li>
+	<li class="active"><a href=".">{% blocktrans with name=voucher.name %}Delete voucher '{{ name }}'?{% endblocktrans %}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-	<h1>{% trans "Delete voucher '{{ voucher.name }}'?" %}</h1>
+	<h1>{% blocktrans with name=voucher.name %}Delete voucher '{{ name }}'?{% endblocktrans %}</h1>
 </div>
 {% endblock header %}
 
