Added helper for getting number of children.
Strangely, the Treebreard method get_children_count returns the wrong
number sometimes.

--- a/oscar/templates/dashboard/catalogue/product_update.html
+++ b/oscar/templates/dashboard/catalogue/product_update.html
@@ -87,6 +87,10 @@
 		<div class="sub-header">
 			<h3 class="app-ico ico_home icon">{% trans "Category information" %}</h3>
 		</div>
+		<p>{% blocktrans %}The first category in this list is the "primary" category for the product, and will be the one displayed
+		in the site breadcrumb trail.
+		{% endblocktrans %}
+		</p>
     	{{ category_formset.management_form }}
     	{% for category_form in category_formset %}
 			{% include "partials/form_fields_inline.html" with form=category_form %}
