--- a/oscar/templates/checkout/thank_you.html
+++ b/oscar/templates/checkout/thank_you.html
@@ -91,7 +91,11 @@
 </div>
 <div class="basket-items">
     <div class="row-fluid">
-		<h4 class="span11">{% trans "Shipping charge - {{order.shipping_method}}" %}</h4>
+		<h4 class="span11">
+            {% blocktrans with order.shipping_method as shipping_method %}
+            Shipping charge - {{ shipping_method }}
+            {% endblocktrans %}
+        </h4>
         <div class="span1">{{ order.shipping_incl_tax|currency }}</div>
     </div>
 </div>
