--- a/oscar/templates/oscar/customer/change-password.html
+++ b/oscar/templates/oscar/customer/change-password.html
@@ -17,25 +17,24 @@
 </ul>
 {% endblock %}
 
-
 {% block title %}
 {% trans 'Change password' %} | {{ block.super }}
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-    <h2>{% trans 'Change password' %}</h2>
+    <h1>{% trans 'Change password' %}</h1>
 </div>
 {% endblock header %}
 
 
 {% block content %}
 
-<form action="." method="post">
+<form id="change_password_form" action="." method="post">
     {% csrf_token %}
     {% include 'partials/form_fields.html' with form=form %}
     <div class="form-actions">
-        <button type="submit" class="btn btn-primary">{% trans 'Update password' %}</button>
+        <button type="submit" class="btn btn-large btn-primary">{% trans 'Update password' %}</button>
         {% trans 'or' %} <a href="{% url customer:summary %}">{% trans 'cancel' %}</a>.
     </div>
 </form>
