--- a/oscar/templates/oscar/customer/profile-form.html
+++ b/oscar/templates/oscar/customer/profile-form.html
@@ -15,7 +15,6 @@
 </ul>
 {% endblock %}
 
-
 {% block title %}
 {% trans 'Edit profile' %} | {{ block.super }}
 {% endblock %}
@@ -26,16 +25,13 @@
 </div>
 {% endblock header %}
 
-
 {% block content %}
-
-<form action="." method="post">
-    {% csrf_token %}
-    {% include 'partials/form_fields.html' with form=form %}
-    <div class="form-actions">
-        <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
-        {% trans 'or' %} <a href="{% url customer:summary %}">{% trans 'cancel' %}</a>.
-    </div>
+<form id="profile_form" action="." method="post">
+	{% csrf_token %}
+	{% include 'partials/form_fields.html' with form=form %}
+	<div class="form-actions">
+		<button type="submit" class="btn btn-primary btn-large">{% trans 'Save' %}</button>
+		{% trans 'or' %} <a href="{% url customer:summary %}">{% trans 'cancel' %}</a>.
+	</div>
 </form>
-
 {% endblock content %}
